--- a/css/baidu.css
+++ b/css/baidu.css
@@ -1,34 +1,35 @@
 @charset "utf-8";
+				.xx{
+					min-width: 1920px;
+					min-height: 1080px;
+				}
 				.s{
 					width: 100%;
 					height: 200px;
 				}
 				.v{
-					margin-left: 1350px;
-					
+					float: right;
+					max-height: 200px;
 				}
 				.x{
-			
 					width: 100%;
 					height: 150px;
 				}
 				.q{
-				
 					width: 100%;
-					height: 300px;
+					height: 200px;
 				}
 				#z{
-					margin-left: 750px;
+					margin-left: 45%;
 				}
 				.d{
-			
 					width: 100%;
 					height: 60px;
 				}
 			 input[type="text"]{
-					width: 750px;
+					width: 59%;
 					height: 36px;
-					margin-left: 500px;
+					margin-left: 41%;
 				}
 				#h{
 					width: 100px;
@@ -49,18 +50,16 @@
 					color: white;
 				}
 				.f{
-				
 					width: 100%;
 					height:160px;
 				}
 				.a{
-				
-					width: 1250px;
+					width: 70%;
 					height: 50px;
 				}
 				.b{
-				
-					width: 300px;
+					margin-left: 0px;
+					width: 20%;
 					height: 50px;
 				}
 				.a,.b{
@@ -78,20 +77,20 @@
 					color: black;
 				}
 				.p{
-					margin-left: 36%;
+					width: 100%;
+					margin-left: 25.5%;
 					color: #999999;
 				}
 				.p > a{
 					color: #999;
 				}
 				.y{
-					margin-left: 48.2%;
-
+					margin-left: 50%;
 					width: 64px;
 					height: 64px;
 				}
 				.t{
-					text-align: center;
+					margin-left: 51.4%;
 					color: #999999;
 					font-weight: bold;
 				}
@@ -103,11 +102,15 @@
 					color: #999999;
 				}
 				#r{
-				
 					margin-left: -100px;
-					width: 800px;
-					height: 150px;
+					max-width: 100%;
+					height: 50px;
 				}
 				#m{
 					color: #999999;
+				}
+				#o{
+					margin-top: 5%;
+					margin-left:25% ;
+					max-width: 50%;
 				}
